task5/deploy/config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: config
  name: config
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config
  template:
    metadata:
      labels:
        app: config
    spec:
      containers:
        - image: gm-config:v1
          name: config
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
