task5/deploy/config/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: config
  name: config
  namespace: default
spec:
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app: config
  type: ClusterIP
