task5/deploy/config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: config
                port:
                  number: 8888
